# openEO-RuSTAC

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE.md  README.md  THIRD_PARTY.md  deny.toml  flake.nix
.github/workflows/: ci.yml
apps/orbit-cli/: Cargo.toml
apps/orbit-cli/src/: main.rs
apps/orbit-cli/tests/: cli_geo.rs
apps/orbit-openeo/: BACKEND-SCOPE.md  Cargo.toml  ENDPOINT_AUDIT.md  PROCESS_AUDIT.md  README.md
apps/orbit-openeo/examples/: arithmetic_chain.json  complex_10node_nomask_real_s2.json  complex_10node_nonlinear_real_s2.json  complex_10node_real_s2.json  complex_15node_environmental_real_s2.json  complex_15node_nomask_real_s2.json  complex_branching_diamond_10m_real_s2.json  complex_branching_diamond_real_s2.json  complex_pipeline.json  masked_ndvi_png_real_s2.json  ndvi_mean_png_real_s2.json  ndvi_mean_time.json  test_ndvi_e2e.sh
apps/orbit-openeo/spec/: openapi.json
apps/orbit-openeo/src/: alignment.rs  auth_layer.rs  block_executor.rs  catalog.rs  chunk_plan.rs  data_cube.rs  datacube.rs  engine_bridge.rs  event_bus.rs  executor.rs  file_store.rs  job_registry.rs  job_store.rs  lib.rs  main.rs  process_catalog.rs  process_graph.rs  process_graph_ir.rs  provenance.rs  runner.rs  schema.rs  security.rs  state.rs  storage_contracts.rs  typed_errors.rs  typed_stac.rs  udp_store.rs  url_policy.rs
apps/orbit-openeo/src/auth/: basic.rs  bearer.rs  mod.rs
apps/orbit-openeo/src/geo_executor/: download.rs  eval_apply.rs  eval_arrays.rs  eval_cube_ops.rs  eval_load.rs  eval_mask.rs  eval_mask_from_values.rs  eval_misc.rs  eval_ndvi.rs  eval_reduce.rs  identifier.rs  mod.rs  registry.rs  stac.rs  sub_graph.rs
apps/orbit-openeo/src/routes/: catalogs.rs  credentials.rs  discovery.rs  files.rs  jobs.rs  mod.rs  process_graphs.rs  products.rs  result.rs  services.rs  spec.rs  subscription.rs  validation.rs
apps/orbit-openeo/tests/: apply_callback_e2e.rs  complex_pipeline_verification.rs  mask_from_values_e2e.rs  ndvi_mean_time_e2e.rs
apps/orbit-server/: Cargo.toml
apps/orbit-server/src/: main.rs  service.rs
crates/eo-catalog/: Cargo.toml
crates/eo-catalog/src/: auth.rs  client.rs  lib.rs  provider.rs
crates/eo-core/: Cargo.toml
crates/eo-core/src/: block.rs  lib.rs  output.rs  shape.rs  transform.rs  window.rs
crates/eo-io/: Cargo.toml
crates/eo-io/src/: atomic.rs  lib.rs  raster_type.rs  vsi.rs
crates/eo-kernel/: Cargo.toml
crates/eo-kernel/src/: block.rs  executor.rs  lib.rs  reduce.rs  worker.rs
crates/eo-mask/: Cargo.toml
crates/eo-mask/src/: confidence.rs  lib.rs  provider.rs  qa_pixel.rs  scl.rs
crates/eo-process/: Cargo.toml
crates/eo-process/src/: graph.rs  lib.rs
crates/eo-vector/: Cargo.toml
crates/eo-vector/src/: lib.rs
crates/orbit-cache/: Cargo.toml
crates/orbit-cache/src/: lib.rs
crates/orbit-config/: Cargo.toml
crates/orbit-config/src/: lib.rs
crates/orbit-core/: Cargo.toml
crates/orbit-core/src/: error.rs  lib.rs  model.rs
crates/orbit-etl/: Cargo.toml
crates/orbit-etl/src/: engine.rs  lib.rs  spec.rs
crates/orbit-etl/tests/: end_to_end.rs
crates/orbit-geo/: Cargo.toml  README.md
crates/orbit-geo/benches/: apply_reduction.rs  bench_apply.rs  bench_apply_with_mask.rs  bench_get_vs_get_remote.rs  bench_ndvi_annual_full_tile.rs
crates/orbit-geo/examples/: 01_create_raster_dataset_simple.rs  02_builder_methods.rs  03_process_image.rs  04_compute_ndvi_synthetic.rs  05_apply_reduction_mean_over_time.rs  06_apply_reduction_with_mask.rs  07_apply_with_mask.rs  08_apply_reduction_row_pixel.rs  09_read_block_layer_idx.rs  10_extend_datasets.rs  11_stack_datasets.rs  12_sample_points.rs  13_zonal_histogram.rs  14_mosaic_via_gdal_utils.rs  15_warp_to_epsg.rs  16_rasterize_polygon.rs  17_convert_to_cog.rs  18_write_window3_direct.rs  19_image_query_builder.rs  20_canonical_bands_lookup.rs  21_collection_id_per_provider.rs  22_intersects_variants.rs  23_vsi_rewrite_paths.rs  24_cmp_serializes_to_stac.rs  25_layer_mappings_for_scenes.rs  26_configure_anonymous_s3.rs  27_planetary_computer_signing_endpoint.rs  28_apply_cog_output.rs  29_data_source_builder.rs  30_provider_constants.rs  bench_download_one_cog.rs  ndvi_mean.rs
crates/orbit-geo/src/: array_ops.rs  async_download.rs  async_io.rs  block.rs  builder.rs  cache.rs  cloud_mask.rs  composition.rs  dataset.rs  error.rs  gdal_utils.rs  lib.rs  ml.rs  openeo.rs  processing.rs  products.rs  providers.rs  rasterization.rs  sampling.rs  source.rs  stac.rs  stac_helpers.rs  test_support.rs  types.rs  writer.rs  zonal_stats.rs
crates/orbit-geo/src/dsl/: builder.rs  collection.rs  exec.rs  filter.rs  intersects.rs  mod.rs  registry.rs
crates/orbit-geo/tests/: async_io.rs  live_s2.rs  live_s2_cached_pipeline.rs  live_s2_pipelines.rs
crates/orbit-observability/: Cargo.toml
crates/orbit-observability/src/: lib.rs
crates/orbit-proto/: Cargo.toml  build.rs
crates/orbit-proto/src/: lib.rs
crates/orbit-resilience/: Cargo.toml
crates/orbit-resilience/src/: lib.rs
docs/: README.md  clean-room-protocol.md
docs/archive/: 2026-05-21-parity-audit.md  2026-05-21-parity-plan.md
docs/parity/: EORS_COMPONENT_COMPARISON.md  MISSING_FEATURES.md  SURFACE.csv  SURFACE.md
docs/perf/: BENCHMARK_BASELINE.md  CANONICAL_PIPELINE_BASELINE.md  IN_PROCESS_DOWNLOAD_DESIGN.md
docs/plans/: 01-maturity-and-parity.md  02-net-new-gaps.md
examples/: sample.csv
migrations/: 0001_init.sql
proto/: etl.proto
scripts/: bench.sh  check_backend_scope.sh
tools/api-diff/: Cargo.toml
tools/api-diff/src/: lib.rs  main.rs
