[package]
name         = "orbit-server"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "orbit-server"
path = "src/main.rs"

[dependencies]
orbit-core         = { workspace = true }
orbit-proto        = { workspace = true }
orbit-etl          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tokio-stream       = { workspace = true }
futures            = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
time               = { workspace = true }
