[package]
name         = "eo-catalog"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "STAC catalog client + asset signing (Planetary Computer SAS, Earth Search S3, EarthData OIDC). Local STAC Parquet index. Public API surface only — concrete clients land in subsequent weeks."

[lints]
workspace = true

[features]
default = []

[dependencies]
async-trait  = { workspace = true }
eo-io        = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
url          = "2"

[dev-dependencies]
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt"] }
