[package]
name         = "eo-mask"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Cloud / quality / shadow mask kernels: Fmask, s2cloudless, SCL, Landsat QA_PIXEL. Public trait + decoders; algorithm implementations land week-by-week."

[lints]
workspace = true

[dependencies]
eo-core     = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
serde_json  = { workspace = true }
