[package]
name         = "eo-process"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "OpenEO process-graph AST + local executor stubs. The wire schema mirrors openEO API 1.2; concrete remote-backend integration lands later."

[lints]
workspace = true

[dependencies]
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
serde_json   = { workspace = true }
