[package]
name         = "eo-vector"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Vector / polygon ops: rasterisation + zonal statistics traits. Implementations land in subsequent weeks."

[lints]
workspace = true

[dependencies]
eo-core     = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
serde_json  = { workspace = true }
