[package]
name         = "orbit-cache"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Two-tier content-addressed cache: in-memory moka tier + on-disk SHA-256 store. Powers STAC asset reuse across pipeline runs."

[lints]
workspace = true

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
sha2        = "0.10"
parking_lot = { workspace = true }

[dev-dependencies]
tempfile    = "3"
