[package]
name        = "orbit-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
polars     = { workspace = true }
sqlx       = { workspace = true }
uuid       = { workspace = true }
time       = { workspace = true }
