[package]
name         = "orbit-etl"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[dependencies]
orbit-core         = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream       = { workspace = true }
futures            = { workspace = true }
async-trait        = { workspace = true }
polars             = { workspace = true }
sqlx               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
uuid               = { workspace = true }
time               = { workspace = true }
dashmap            = { workspace = true }
once_cell          = { workspace = true }

[dev-dependencies]
tempfile           = "3"
tokio              = { workspace = true, features = ["macros", "rt-multi-thread"] }
