[package]
name        = "orbit-proto"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[dependencies]
tonic       = { workspace = true }
tonic-prost = { workspace = true }
prost       = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build       = { workspace = true }
tonic-prost-build = { workspace = true }
