[package]
name        = "api-diff"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.85"
license     = "MIT OR Apache-2.0"
description = "Walks two Rust source trees and emits a CSV of public-symbol differences. Used to plan parity work without reading either implementation."

# Standalone crate — intentionally NOT a member of the outer workspace, so its
# heavy parser deps don't bloat the orbit-etl compile.
[workspace]

[dependencies]
syn          = { version = "2", features = ["full", "extra-traits", "visit"] }
quote        = "1"
proc-macro2  = "1"
walkdir      = "2"
csv          = "1"
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api-diff"
path = "src/main.rs"
